    Enables system messages with correct source/line indication.

* docutils/parsers/rst/directives/tables.py

  - Removed `CSVTable.decode_from_csv()` and `CSVTable.encode_from_csv()`.
    Not required with Python 3.

* docutils/parsers/rst/roles.py

  - Renamed `normalized_role_options()` to `normalized_role_options()`
    (it is now also used for directive options).

* docutils/transforms/frontmatter.py

  - Update `DocInfo` to work with corrected element categories.

* docutils/transforms/misc.py:

  - Fix for `misc.Transitions`: report an error if a <transition> element
    follows a <meta> or <decoration> element as this is invalid
    according to ``docutils.dtd``.

* docutils/transforms/writer_aux.py

  - Removed `Compound` class.

* docutils/transforms/references.py

  - Make `AnonymousHyperlinks` transform idempotent.

* docutils/transforms/universal.py

  - `Messages` also handles "loose" system messages generated by the parser.

* docutils/utils/__init__.py

  - Removed `Reporter.set_conditions()`.
    Set attributes via configuration settings or directly.

* docutils/utils/error_reporting.py

  - Removed. Obsolete in Python 3.

* docutils/writers/docutils-xml.py

  - Do not increase indentation of follow-up lines inside inline elements.
    when formatting with `indents`_.

* docutils/writers/_html_base.py

  - Make MathML the default math_output_.

* docutils/writers/html4css1/__init__.py

  - Keep default math_output_ value "HTML math.css".

* docutils/writers/latex2e/__init__.py

  - Remove optional argument `pxunit` of `LaTeXTranslator.to_latex_length()`
    (ignored since at least 2012).

* docutils/writers/manpage.py

  - Remove code for unused emdash bullets.
  - Feature-request #105 more informative document comments.
    docutils version in header
  - Stop converting text to full capitals (bug #481).

* docutils/writers/null.py

  - `null.Writer.translate()` sets `self.output` to the empty string.

* tools/rst2odt_prepstyles.py
