@@ -8,8 +8,8 @@ writer_name = "pep_html"
 settings_overrides = {
     'python_home': "http://www.python.org",
     'pep_home': "http://www.python.org/peps",
-    'no_random': 1,
-    'cloak_email_addresses': 1,
+    'no_random': True,
+    'cloak_email_addresses': True,
     # local copy of default stylesheet:
     'stylesheet_path': 'functional/input/data/html4css1.css',
     }
