@@ -77,6 +77,10 @@ Release 0.22b.dev (unpublished)
   - Renamed `normalized_role_options()` to `normalized_role_options()`
     (it is now also used for directive options).
 
+* docutils/readers/__init__.py:
+
+  - Deprecate "parser_name" argument of `Reader.__init__()`.
+
 * docutils/transforms/frontmatter.py
 
   - Update `DocInfo` to work with corrected element categories.
